# Operating-systems

cpcs51500/tu2/: states.txt
src/: CMakeCache.txt  CMakeLists.txt  Makefile  avg3.c  cmake_install.cmake
