cmake_minimum_required(VERSION 3.4) 
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
project(my)
enable_language(C) 
enable_testing() 
add_executable( avg-sfile avg-sfile.c ) 
add_executable( avg-mfile avg-mfile.c avg.c ) 
add_executable( avg-mfile-basic-test avg-mfile-basic-test.c avg.c ) 
add_test( avg-mfile-basic-test avg-mfile-basic-test )